starting carousel with preselected profiles

--- a/src/components/ProfileList.scss
+++ b/src/components/ProfileList.scss
@@ -2,5 +2,6 @@
   display: flex;
   max-width: 100%;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-between;
+  padding: 1rem;
 }
