--- a/src/components/ProfileList.scss
+++ b/src/components/ProfileList.scss
@@ -2,6 +2,12 @@
   display: flex;
   max-width: 100%;
   flex-wrap: wrap;
-  justify-content: space-between;
+  justify-content: space-around;
   padding: 1rem;
+  
+  @media (min-width: 75rem) {
+    max-width: 75rem;
+    justify-content: space-between;
+    margin: auto;
+  }
 }
