--- a/src/components/ProfileTile.scss
+++ b/src/components/ProfileTile.scss
@@ -1,13 +1,23 @@
 .ProfileTile {
   padding: 1rem;
   display: flex;
-  min-width: calc(100% / 3 - 3rem);
-  max-width: calc(100% / 3 - 3rem);
+  min-width: calc(100% - 3rem);
+  max-width: calc(100% - 3rem);
   justify-content: space-around;
   height: 14rem;
   align-items: center;
-  border-bottom: 1px solid;
+  border-bottom: 1px solid darkgreen;
   margin: 1.5rem;
+  
+  @media (min-width: 37rem) {
+    min-width: calc(100% / 2 - 3rem);
+    max-width: calc(100% / 2 - 3rem);
+  }
+
+  @media (min-width: 47rem) {
+    min-width: calc(100% / 3 - 3rem);
+    max-width: calc(100% / 3 - 3rem);
+  }
   
   &-details {
     flex: 1;
@@ -17,5 +27,9 @@
   &-birthday {
     font-size: .9rem;
     font-style: italic;
+
+    svg {
+      color: darkgreen;
+    }
   }
 }
